feat: update projects

--- a/index.html
+++ b/index.html
@@ -591,12 +591,10 @@
                                 </a>
                                 <div class="projects__info">
                                     <h4 class="projects__title">
-                                        Online-Shop
+                                        Carousel
                                     </h4>
                                     <div class="projects__descr">
-                                        This online gift shop offers a wide selection of gifts for every taste and
-                                        budget - from unique souvenirs to exclusive handmade gifts. The website is built
-                                        using React.
+                                        "A carousel implemented using JavaScript and CSS."
                                     </div>
                                     <div class="projects-tech">
                                         <ul class="projects-tech__list">
@@ -624,11 +622,10 @@
                                 </a>
                                 <div class="projects__info">
                                     <h4 class="projects__title">
-                                        CSS Bayan
+                                        Slider
                                     </h4>
                                     <div class="projects__descr">
-                                        "The website contains various programming memes that will lift your spirits and
-                                        make you smile."
+                                        "A slider implemented using pure JS."
                                     </div>
                                     <div class="projects-tech">
                                         <ul class="projects-tech__list">
@@ -661,9 +658,38 @@
                                         Online-Shop
                                     </h4>
                                     <div class="projects__descr">
-                                        This online gift shop offers a wide selection of gifts for every taste and
-                                        budget - from unique souvenirs to exclusive handmade gifts. The website is built
-                                        using React.
+                                        "Animal Assistance Website in Boston. Here, a slider, pagination, and carousel are implemented using pure JS."
+                                    </div>
+                                    <div class="projects-tech">
+                                        <ul class="projects-tech__list">
+                                            <li class="projects-tech__item">
+                                                <img src="assets/icons/html.svg" alt="" class="projects-tech__image">
+                                            </li>
+                                            <li class="projects-tech__item">
+                                                <img src="assets/icons/css.svg" alt="" class="projects-tech__image">
+                                            </li>
+                                            <li class="projects-tech__item">
+                                                <img src="assets/icons/javascript.svg" alt=""
+                                                     class="projects-tech__image">
+                                            </li>
+                                            <li class="projects-tech__item">
+                                                <img src="assets/icons/sass.svg" alt="" class="projects-tech__image">
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="projects__item">
+                                <a href="https://udjenkl.github.io/Our-friends/"
+                                   class="projects__link" target="_blank">
+                                    <img src="assets/img/project_06.jpeg" alt="photo-filter" class="projects__image">
+                                </a>
+                                <div class="projects__info">
+                                    <h4 class="projects__title">
+                                        Virtual Keyboard
+                                    </h4>
+                                    <div class="projects__descr">
+                                        "A virtual keyboard implemented using pure JS."
                                     </div>
                                     <div class="projects-tech">
                                         <ul class="projects-tech__list">
