feat: edit main__descr

--- a/index.html
+++ b/index.html
@@ -570,16 +570,18 @@
                         </h3>
                         <div class="divider divider_black"></div>
                         <div class="main__descr">
-                            Hello! My name is Yauhen Klimovich and I am an experienced front-end developer with
-                            expertise in React
-                            JS, HTML, CSS, and preprocessors, as well as experience with Git. I graduated from the
-                            Belarusian State University of Informatics and Radioelectronics with a degree in engineering
-                            and programming, and have a wealth of experience in developing user interfaces for web
-                            applications. I always strive to create functional and user-friendly web applications, and I
-                            am ready to use my knowledge and experience to create high-quality and scalable web
-                            applications that meet the needs of users. If you are looking for an experienced and
-                            talented front-end developer, I am ready to offer you my services and contribute to the
-                            development of your business.
+                            Hello! My name is Eugene, I’m 35 years old and I live in the most beautiful country in the world – Belarus!
+                            I have been interested in programming since childhood. I can say, since the first time I saw a computer and got to know it.
+                            In 2001 I completed courses in HTML and Delphi. After leaving school, I entered the Private Institute of Management and Entrepreneurship in Minsk, where I received a bachelor's degree in economics and management. Later, I learned programming on my own, using various books and video tutorials.
+                            In 2021, I entered the Belarusian State University of Informatics and Radioelectronics and successfully graduated as a software engineer. During my studies, I learned various technologies and programming languages. But -web development- I liked most of all! I completed front-end development courses at  IT school and then joined the RS School developer community. At the moment I have received certificates for stage0, stage1 and continue to study at stage2. I'm also learning React and Angular and have already created some projects and portfolios. I made various landing pages, virtual keyboard and developed several online stores on React.js. Аlso I solve problems on Codewars and have a level 5q.
+                            For understanding – Who am I – want to tell you something about my hobbies:
+                            There are -  cycling, playing the guitar, reading, cooking, traveling, and I also have a second junior rank in chess.
+                            I like the process of learning and self-development! My goal is to get a Front-End Developer position. For me, this will be proof that working hard and being disciplined means you can always change your life and field of activity. My main quality is responsible and conscientious approach to work and focus on results. In addition, my education as an economist-manager will help me become an excellent team leader!
+                            I am exactly the person you are looking for!
+                            Now you know who you need to choose!
+                            My contacts are here!
+                            Thank you very much for your time! I’m Eugene!
+
                         </div>
                         <article class="about-strengths">
                             <h4 class="main__subheader">
