feat: add icon and diplom

--- a/index.html
+++ b/index.html
@@ -494,7 +494,10 @@
                                 Belarusian State University of Informatics and Radioelectronics (BSUIR)
                             </div>
                             <div class="education__descr">
-                                Department of microprocessor systems and networks
+                                <a href="https://raw.githubusercontent.com/UdjenKL/sertificate/main/bsuir.jpg"
+                                   class="side__link" target="_blank">
+                                    Software Engineer
+                                </a>
                             </div>
                         </div>
                         <div class="divider divider_yellow"></div>
@@ -558,6 +561,7 @@
                             <li class="skills__item skills__sass">SASS</li>
                             <li class="skills__item skills__bootstrap">Bootstrap</li>
                             <li class="skills__item skills__javascript">JavaScript</li>
+                            <li class="skills__item skills__react">React</li>
                             <li class="skills__item skills__github">GitHub</li>
                             <li class="skills__item skills__figma">Figma</li>
                         </ul>
