feat: add video link about me

--- a/index.html
+++ b/index.html
@@ -475,6 +475,9 @@
                         <h2 class="header__subtitle">
                             Front-end developer
                         </h2>
+                        <h3 class="header__subtitle">
+                            <a href="https://www.youtube.com/watch?v=wSjz8ac2jcc">Video about me</a>
+                        </h3>
                     </div>
                 </div>
             </div>
