--- a/index.html
+++ b/index.html
@@ -856,19 +856,8 @@
         </div>
     </footer>
     <script src="js/script.js"></script>
-    <!-- Roistat Counter Start -->
-<script>
-(function(w, d, s, h, id) {
-    w.roistatProjectId = id; w.roistatHost = h;
-    var p = d.location.protocol == "https:" ? "https://" : "http://";
-    var u = /^.*roistat_visit=[^;]+(.*)?$/.test(d.cookie) ? "/dist/module.js" : "/api/site/1.0/"+id+"/init?referrer="+encodeURIComponent(d.location.href);
-    var js = d.createElement(s); js.charset="UTF-8"; js.async = 1; js.src = p+h+u; var js2 = d.getElementsByTagName(s)[0]; js2.parentNode.insertBefore(js, js2);
-})(window, document, 'script', 'cloud.roistat.com', '6c494adcd91a8f79f0d6a75e0de21f2f');
-</script>
-<!-- Roistat Counter End -->
-
-    <!-- BEGIN WHATSAPP INTEGRATION WITH ROISTAT -->
-<div class="js-whatsapp-message-container" style="display:none;">Номер обращения: {roistat_visit} {landingPage} (*пожалуйста, не удаляйте данный номер, а далее вы можете написать ваш вопрос)</div>
+<!-- BEGIN WHATSAPP INTEGRATION WITH ROISTAT -->
+<div class="js-whatsapp-message-container" style="display:none;">Обязательно отправьте это сообщение и дождитесь ответа. Ваш номер: {roistat_visit} ,  {domain}</div>
 <script>
     (function() {
         if (window.roistat !== undefined) {
