--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
 <!-- Roistat Counter End -->
     
 <!-- BEGIN WHATSAPP INTEGRATION WITH ROISTAT -->
-<div class="js-whatsapp-message-container" style="display:none;">Обязательно отправьте это сообщение и дождитесь ответа. Ваш номер: {roistat_visit} ,  {domain}</div>
+<div class="js-whatsapp-message-container" style="display:none;">Ваш номер: {roistat_visit}</div>
 <script>
     (function() {
         if (window.roistat !== undefined) {
