--- a/index.html
+++ b/index.html
@@ -865,10 +865,8 @@
     var js = d.createElement(s); js.charset="UTF-8"; js.async = 1; js.src = p+h+u; var js2 = d.getElementsByTagName(s)[0]; js2.parentNode.insertBefore(js, js2);
 })(window, document, 'script', 'cloud.roistat.com', '6c494adcd91a8f79f0d6a75e0de21f2f');
 </script>
-<!-- Roistat Counter End -->
-    
 <!-- BEGIN WHATSAPP INTEGRATION WITH ROISTAT -->
-<div class="js-whatsapp-message-container" style="display:none;">Ваш номер: {roistat_visit}</div>
+<div class="js-whatsapp-message-container" style="display:none;">Ваш номер: {roistat_visit} , заявка с сайта udjenkl</div>
 <script>
     (function() {
         if (window.roistat !== undefined) {
@@ -929,7 +927,7 @@
         };
     })();
 </script>
-<!-- END WHATSAPP INTEGRATION WITH ROISTAT -->
-</body>
+    <a href="https://wa.me/375333420109">Напишите нам в WhatsApp</a>
+<!-- END WHATSAPP INTEGRATION WITH ROISTAT --></body>
 
 </html>
