--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
             }
         }
     </style>
+    <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = '885e9b7a-4cc9-4904-a374-535736991e05'; widget.src = 'https://widget.yourgood.app/script/widget.js?id=885e9b7a-4cc9-4904-a374-535736991e05&now='+Date.now(); document.head.appendChild(widget); })()</script>
 </head>
 
 <body>
